Fix mobile popup alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -225,7 +225,9 @@ button {
 }
 
 .desktop-only {
-    display: inline-block;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 @media (max-width: 768px) {
